--- a/behappy-canal-example/src/main/resources/application.yml
+++ b/behappy-canal-example/src/main/resources/application.yml
@@ -1,12 +1,11 @@
+canal:
+  server: 192.168.56.100:11111
+  destination: instance
 spring:
   application:
     name: canal-example
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.0.80:3306/test
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.56.100:3306/test
     username: root
     password: root
-  jooq:
-    sql-dialect: mysql
-  flyway:
-    baseline-on-migrate: true
