--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <spring-boot.version>3.0.3</spring-boot.version>
         <canal.version>1.1.6</canal.version>
         <behappy.canal.version>3.0.0</behappy.canal.version>
+        <jakarta.inject.version>3.1.0</jakarta.inject.version>
         <spring.checkstyle.plugin>0.0.28</spring.checkstyle.plugin>
     </properties>
 
@@ -62,6 +63,11 @@
                 <groupId>io.github.wang-xiaowu</groupId>
                 <artifactId>behappy-canal-spring-boot-starter</artifactId>
                 <version>${behappy.canal.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.persistence</groupId>
+                <artifactId>jakarta.persistence-api</artifactId>
+                <version>${jakarta.inject.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
