BUG FIX https://github.com/NormanGyllenhaal/canal-client/issues/21
https://github.com/NormanGyllenhaal/canal-client/issues/17

https://github.com/NormanGyllenhaal/canal-client/issues/20

https://github.com/NormanGyllenhaal/canal-client/issues/18

https://github.com/NormanGyllenhaal/canal-client/issues/16

https://github.com/NormanGyllenhaal/canal-client/issues/10

https://github.com/NormanGyllenhaal/canal-client/issues/8

https://github.com/NormanGyllenhaal/canal-client/issues/5

https://github.com/NormanGyllenhaal/canal-client/issues/4

--- a/behappy-canal-client/pom.xml
+++ b/behappy-canal-client/pom.xml
@@ -22,6 +22,10 @@
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+        </dependency>
 
     </dependencies>
 
