fix: https://github.com/NormanGyllenhaal/canal-client/issues/21 https://github.com/NormanGyllenhaal/canal-client/issues/17 https://github.com/NormanGyllenhaal/canal-client/issues/20 https://github.com/NormanGyllenhaal/canal-client/issues/18 https://github.com/NormanGyllenhaal/canal-client/issues/16 https://github.com/NormanGyllenhaal/canal-client/issues/10 https://github.com/NormanGyllenhaal/canal-client/issues/8 https://github.com/NormanGyllenhaal/canal-client/issues/5 https://github.com/NormanGyllenhaal/canal-client/issues/4 feat: 支持jdk17/springboot3.x（不支持jdk8） 支持mybatis plus注解 升级canal-client版本

--- a/behappy-canal-example/src/main/resources/application.yml
+++ b/behappy-canal-example/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 canal:
-  server: 192.168.56.100:11111
+  server: 192.168.56.100
   destination: instance
+  mode: rabbitMQ
+  vhost: canal
+  user-name: root
+  password: root
 spring:
   application:
     name: canal-example
