--- a/behappy-canal-client/pom.xml
+++ b/behappy-canal-client/pom.xml
@@ -26,7 +26,16 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-annotation</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.mq-amqp</groupId>
+            <artifactId>mq-amqp-client</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
