fix: https://github.com/NormanGyllenhaal/canal-client/issues/21 https://github.com/NormanGyllenhaal/canal-client/issues/17 https://github.com/NormanGyllenhaal/canal-client/issues/20 https://github.com/NormanGyllenhaal/canal-client/issues/18 https://github.com/NormanGyllenhaal/canal-client/issues/16 https://github.com/NormanGyllenhaal/canal-client/issues/10 https://github.com/NormanGyllenhaal/canal-client/issues/8 https://github.com/NormanGyllenhaal/canal-client/issues/5 https://github.com/NormanGyllenhaal/canal-client/issues/4
feat:
支持jdk17/springboot3.x（不支持jdk8）
支持mybatis plus注解
升级canal-client版本

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.wang-xiaowu</groupId>
+    <groupId>io.github.behappy-project</groupId>
     <artifactId>behappy-canal</artifactId>
     <version>3.0.0</version>
     <name>behappy-canal</name>
@@ -53,17 +53,17 @@
                 <version>${canal.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.wang-xiaowu</groupId>
+                <groupId>io.github.behappy-project</groupId>
                 <artifactId>behappy-canal-client</artifactId>
                 <version>${behappy.canal.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.wang-xiaowu</groupId>
+                <groupId>io.github.behappy-project</groupId>
                 <artifactId>behappy-canal-spring-boot-autoconfigure</artifactId>
                 <version>${behappy.canal.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.wang-xiaowu</groupId>
+                <groupId>io.github.behappy-project</groupId>
                 <artifactId>behappy-canal-spring-boot-starter</artifactId>
                 <version>${behappy.canal.version}</version>
             </dependency>
