--- a/behappy-canal-example/pom.xml
+++ b/behappy-canal-example/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.github.wang-xiaowu</groupId>
+        <groupId>io.github.behappy-project</groupId>
         <artifactId>behappy-canal</artifactId>
         <version>3.0.0</version>
     </parent>
     <artifactId>behappy-canal-example</artifactId>
     <dependencies>
         <dependency>
-            <groupId>io.github.wang-xiaowu</groupId>
+            <groupId>io.github.behappy-project</groupId>
             <artifactId>behappy-canal-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
