--- a/behappy-canal-spring-boot-autoconfigure/pom.xml
+++ b/behappy-canal-spring-boot-autoconfigure/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.github.wang-xiaowu</groupId>
+        <groupId>io.github.behappy-project</groupId>
         <artifactId>behappy-canal</artifactId>
         <version>3.0.0</version>
     </parent>
@@ -15,7 +15,7 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.github.wang-xiaowu</groupId>
+            <groupId>io.github.behappy-project</groupId>
             <artifactId>behappy-canal-client</artifactId>
         </dependency>
         <dependency>
