--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>3.0.0</version>
     <name>behappy-canal</name>
     <description>canal-数据同步</description>
+    <url>https://github.com/behappy-project/behappy-canal</url>
     <packaging>pom</packaging>
 
     <modules>
@@ -111,7 +112,7 @@
     <developers>
         <developer>
             <name>wangxiaowu</name>
-            <email>943915349@qq.com</email>
+            <email>wangxiaowu950330@foxmail.com</email>
         </developer>
     </developers>
     <scm>
