fix && update version

--- a/behappy-canal-client/pom.xml
+++ b/behappy-canal-client/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>mq-amqp-client</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
